# tinySVC

./: .gitignore  README.md  svm.py  test.py
src/: classification.py  data_preprocessing.py  data_processing.py  experiment.py  kernel.py  mkl.py  svm.py  test.py
src/smo_kernal/: CMakeLists.txt  interface.cc  smo_solver.cc  smo_solver.h  smo_test.cc
src/smo_kernel/: smo_solver.cc  smo_solver.h
